Changelog
=========

1.1 (unreleased)
----------------

- Make sure `Migrations` field always uses the CheckBoxFieldWidget.
  [lgraf]

- Use transaction.doom() for dry runs.
  This ensures that even an accidental commit() can't result in a DB write.

- Add support for programmatically providing principal mappings
  by registering an IPrincipalMappingSource named adapter.
  [lgraf]

- Rename `user` to `principal` where applicable:

  Most of the operations work for groups as well as for users.
  Therefore the mapping can contain principal IDs, not just
  user IDs.


1.0 (2014-06-16)
----------------

- Initial release