@@ -71,6 +71,61 @@ ZCML:
 This will result in this mapping being selectable as a mapping source with the
 name ``ad-migration-2015`` in the ``@@user-migration`` form.
 
+Registering pre- and post-migration hooks
+-----------------------------------------
+
+If you want to provide your own code that runs before or after any of the
+built-in migration types in ``ftw.usermigration``, you can do so by registering
+hooks that implement the ``IPreMigrationHook`` or ``IPostMigrationHook`` interface.
+
+Example:
+
+.. code:: python
+
+  class ExamplePreMigrationHook(object):
+
+      def __init__(self, portal, request):
+          self.portal = portal
+          self.request = request
+
+      def execute(self, principal_mapping, mode):
+          # ...
+          # your code here
+          # ...
+          results = {
+              'Step 1': {
+                  'moved': [('/foo', 'old', 'new')],
+                  'copied': [],
+                  'deleted': []},
+              'Step 2': {
+                  'moved': [('/bar', 'old', 'new')],
+                  'copied': [],
+                  'deleted': []},
+          }
+          return results
+
+A hook adapter's ``execute()`` method receives the ``principal_mapping`` and
+``mode`` as arguments.
+
+Its results are expected to be a dict of dicts: The outer
+dictionary allows for a hook to group several steps it executes and
+report their results separately. The inner dictionary follows the same
+structure as the results of the built-in migrations.
+
+
+ZCML:
+
+.. code:: xml
+
+    <adapter
+        factory=".migrations.ExamplePreMigrationHook"
+        provides="ftw.usermigration.interfaces.IPreMigrationHook"
+        for="Products.CMFPlone.interfaces.siteroot.IPloneSiteRoot
+             zope.publisher.interfaces.browser.IBrowserRequest"
+        name="example-pre-migration-hook"
+    />
+
+
 Links
 =====
 
